--- a/default.hbs
+++ b/default.hbs
@@ -23,14 +23,14 @@
 		{{{body}}}
 		<div id="body-class" style="display: none;" class="{{body_class}}"></div>
 
-		<footer id="footer">
-			<div class="inner">
-				<section class="credits">
-					<span class="credits-theme">{{t "Theme" }} <a href="https://github.com/zutrinken/attila">Attila</a> {{t "by"}} <a href="http://zutrinken.com" rel="nofollow">zutrinken</a></span>
-					<span class="credits-software">{{t "Published with"}} <a href="http://ghost.org">Ghost</a></span>
-				</section>
-			</div>
-		</footer>
+		<!--<footer id="footer">-->
+			<!--<div class="inner">-->
+				<!--<section class="credits">-->
+					<!--<span class="credits-theme">{{t "Theme" }} <a href="https://github.com/zutrinken/attila">Attila</a> {{t "by"}} <a href="http://zutrinken.com" rel="nofollow">zutrinken</a></span>-->
+					<!--<span class="credits-software">{{t "Published with"}} <a href="http://ghost.org">Ghost</a></span>-->
+				<!--</section>-->
+			<!--</div>-->
+		<!--</footer>-->
 	</section>
 
 	<script type="text/javascript" src="{{asset "js/script.js"}}"></script>
